create github pages

--- a/httpiwebsfood.com.br.html
+++ b/httpiwebsfood.com.br.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -82,7 +82,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Sistema Delivery de Pedidos Online&nbsp;</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Receba pedidos ilimitados com<strong> taxa zero</strong></h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Integre nosso sistema de pedidos on-line em seu Site, Facebook, Aplicativo, Whatsapp e impulsione seus os pedidos do seu negócio.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Integre nosso sistema de pedidos on-line em seu Site, Facebook, Aplicativo, Whatsapp e impulsione os pedidos do seu negócio.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="index.html#video3-h"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>Como funciona</a></div>
             </div>
         </div>
@@ -104,7 +104,7 @@
         <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">Receber Pedidos Online é fácil.</h2>
         <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">&nbsp;Comece seu sistema de pedidos online de forma profissional com um belo menu on-line, com personalização dos pedidos e ordens amigáveis, com promoções do restaurante e relatórios.
 <div>
-</div><div>Super fácil de configurar, e seus clientes vão adorar a conveniência deste sistema de pedidos de on line.pelo Site, Facebook, Aplicativo e até Whatsapp.</div></h3>
+</div><div>Super fácil de configurar, e seus clientes vão adorar a conveniência deste sistema de pedidos</div><div>on line pelo Site, Facebook, Aplicativo e até Whatsapp.</div></h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
@@ -114,12 +114,12 @@
                              <span class="mbr-iconfont mbri-rocket" style="color: rgb(255, 48, 0); fill: rgb(255, 48, 0);"></span>
                         </div>
                         <div class="mbr-crt-title">
-                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">É simple e fácil, tudo automatizado e intuitivo para você ter funcionendo em questão de &nbsp;minutos.</h4>
+                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">É simple e fácil, tudo automatizado e intuitivo para você ter funcionando em questão de &nbsp;minutos.</h4>
                         </div>
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Ao solicitar o acesso nós enviamos para você um e-mail com link e dados de acesso ao painel do sistema de configuração e em algns cliques estará funcionando. E se tiver alguma dificuldada nossa equipe de suporte entra em contato para ajudar..
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Ao solicitar o acesso nós enviamos para você um e-mail com link e dados de acesso ao administrativo e em alguns cliques estará funcionando. E se tiver alguma dificuldade nossa equipe de suporte entra em contato para ajudar..
                         </p>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Post fotos de dar agua na boca dos pratos mais recentes e deixe seus seguidores pedirem online diretamente do Facebook. Os fãs de sua página adoram compartilhar comida com seus amigos.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Post fotos de dar água na boca dos pratos mais recentes e deixe seus seguidores pedirem online diretamente do Facebook. Os fãs de sua página adoram compartilhar comida com seus amigos.</p>
                     </div>
                 </div>
 
@@ -190,34 +190,34 @@
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5">
             Enter Gallery Subtitle here.
         </h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rPpJ0un1Yv">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rPpWU26r4z">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/restaurant-website-laptop-mobile-devices-f1aaeb1638-510x318.png" alt="" data-slide-to="0" title="" data-target="#rPpJ0unlfZ">
+                    <img class="w-100" src="assets/images/restaurant-website-laptop-mobile-devices-f1aaeb1638-510x318.png" alt="" data-slide-to="0" title="" data-target="#rPpWU26Rks">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/screenshot-510x382.png" alt="" data-slide-to="1" title="" data-target="#rPpJ0unlfZ">
+                    <img class="w-100" src="assets/images/screenshot-510x382.png" alt="" data-slide-to="1" title="" data-target="#rPpWU26Rks">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/food-ordering-card3-f12b263b7c.png.webp" alt="" data-slide-to="2" title="" data-target="#rPpJ0unlfZ">
+                    <img class="w-100" src="assets/images/food-ordering-card3-f12b263b7c.png.webp" alt="" data-slide-to="2" title="" data-target="#rPpWU26Rks">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/food-ordering-card2-056492b904.png.webp" alt="" data-slide-to="3" title="" data-target="#rPpJ0unlfZ">
+                    <img class="w-100" src="assets/images/food-ordering-card2-056492b904.png.webp" alt="" data-slide-to="3" title="" data-target="#rPpWU26Rks">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rPpJ0un1Yv">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rPpWU26r4z">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rPpJ0unlfZ">
+                        <div class="carousel slide" data-ride="carousel" id="rPpWU26Rks">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/restaurant-website-laptop-mobile-devices-f1aaeb1638-510x318.png" alt="">
@@ -233,18 +233,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rPpJ0unlfZ"></li>
-                                <li data-slide-to="1" data-target="#rPpJ0unlfZ"></li>
-                                <li data-slide-to="2" data-target="#rPpJ0unlfZ"></li>
-                                <li data-slide-to="3" data-target="#rPpJ0unlfZ"></li>
+                                <li data-slide-to="0" class="active" data-target="#rPpWU26Rks"></li>
+                                <li data-slide-to="1" data-target="#rPpWU26Rks"></li>
+                                <li data-slide-to="2" data-target="#rPpWU26Rks"></li>
+                                <li data-slide-to="3" data-target="#rPpWU26Rks"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rPpJ0unlfZ">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rPpWU26Rks">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rPpJ0unlfZ">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rPpWU26Rks">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -341,9 +341,7 @@
                     </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Pedidos pelo Facebook</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                           Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Este aplicativo adiciona um botão "Ver Menu &amp; Reserva de Mesa" à sua página do Facebook para que seus fãs possam encomendar diretamente pela sua Fanpage</p>
                     </div>
                 </div>
             </div>
@@ -355,8 +353,7 @@
                     </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Imagens no Menu</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                           All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
+                        <p class="mbr-text mbr-fonts-style display-7">Nós fornecemos um estoque livre da fotos deliciosas dos pratos. Sinta-se livre para usá-los ou fazer upload de seus próprios arquivos para criar menus de grande aparência..
                         </p>
                     </div>
                 </div>
@@ -369,9 +366,7 @@
                     </div>
                     <div class="media-body card-box">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Promoções ou Cupões</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                           Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Configure diversos tipos de  lógica de promoção que você pode pensar. Agora é hora de executar esse promo que você sempre quis.</p>
                     </div>
                 </div>
             </div>
@@ -383,9 +378,7 @@
                     </div>
                     <div class="card-box media-body">
                         <h4 class="card-title py-3 mbr-fonts-style display-5">Relatórios detalhados</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                           Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Tome decisões de negócios com base em dados relevantes do painel de relatórios.</p>
                     </div>
                 </div>
             </div>
@@ -413,7 +406,7 @@
                         </div>
                     </div>                
                     <div class="card-box align-left">
-                        <p class="mbr-text mbr-fonts-style display-5">O botão " Ver MENU e encomendar " é o seu novo aplicativo de pedidos do Facebook. Ao clicar nele, uma guia do Facebook é aberta com o menu do restaurante. Os clientes podem encomendar sem deixar o Facebook.</p>
+                        <p class="mbr-text mbr-fonts-style display-5">O botão " Ver MENU e Pedir " é o seu novo aplicativo de pedidos do Facebook. Ao clicar nele, uma guia do Facebook é aberta com o menu do restaurante. Os clientes podem encomendar ou pedir sem deixar o Facebook.</p>
                     </div>
                 </div>
 
@@ -461,7 +454,7 @@
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-5">Trasforme "curtidas" em Pedidos.</h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Post fotos de dar agua na boca dos pratos mais recentes e deixe seus seguidores pedirem online diretamente do Facebook. Os fãs de sua página adoram compartilhar comida com seus amigos.
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">Post fotos de dar água na boca dos pratos mais recentes e deixe seus seguidores pedirem online diretamente do Facebook. Os fãs de sua página adoram compartilhar comida com seus amigos.
                         </p>
                     </div>
 
@@ -472,7 +465,7 @@
                                     <span class="mbr-iconfont mbri-like" style="color: rgb(255, 48, 0); fill: rgb(255, 48, 0);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-5">No final do pedido seus clientes podem compartilhar o pedido na pagina deles.</h4>
+                                    <h4 class="card-title mbr-fonts-style display-5">No final do pedido seus clientes podem compartilhar o pedido na página deles.</h4>
                                 </div>
                             </div>                
 
@@ -504,18 +497,18 @@
             <div class="card p-3 align-center">
                 <div class="wrap">
                     <div class="pie_progress progress1" role="progressbar" data-goal="50">
-                        <p class="pie_progress__number mbr-fonts-style display-5">90%</p>
+                        <p class="pie_progress__number mbr-fonts-style display-5">98%</p>
                     </div>
                 </div> 
                 <div class="mbr-crt-title pt-3">
-                    <h4 class="card-title py-2 mbr-fonts-style display-5">Pessoas da pessoas estão Conectadas&nbsp;</h4>
+                    <h4 class="card-title py-2 mbr-fonts-style display-5">Das pessoas estão Conectadas&nbsp;</h4>
                 </div>                 
             </div>
 
             <div class="card p-3 align-center">
                 <div class="wrap">
                     <div class="pie_progress progress2" role="progressbar" data-goal="60">
-                        <p class="pie_progress__number mbr-fonts-style display-5">65%</p>
+                        <p class="pie_progress__number mbr-fonts-style display-5">75%</p>
                     </div>
                 </div> 
                 <div class="mbr-crt-title pt-3">
@@ -526,7 +519,7 @@
             <div class="card p-3 align-center">
                 <div class="wrap">
                     <div class="pie_progress progress3" role="progressbar" data-goal="70">
-                        <p class="pie_progress__number mbr-fonts-style display-5">88%</p>
+                        <p class="pie_progress__number mbr-fonts-style display-5">93%</p>
                     </div>
                 </div> 
                 <div class="mbr-crt-title pt-3">
@@ -633,7 +626,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MlSHULdUAi2nQeVlsLhMZ7NQu4Ig4I4fxIT9y4W7vL+YEOj8nwBqNWxc3FVPziW31+nsZaYvFM7HLcjv6Bhx3uN9AjPbcnN2b1V0eCAswTAgZLnFpyF75zjT3I0UsrXu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zxLIqhTe0QxQCZYqZHUCQHXDSSIkoCnPhFCCbpdwk30yuCY1BA/buiJPaHi3nKD1rXf83iHlhf0FMZREkjWuzIYoGh1CMXzkJjXLSbwm9C39I0zRaEmoXIejxCifIWUe">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
